--- a/manifest.json
+++ b/manifest.json
@@ -36,6 +36,7 @@
         "styles/main.css"
       ],
       "js": [
+        "scripts/jquery-1.11.0.min.js",
         "scripts/contentscript.js"
       ],
       "run_at": "document_end",
