--- a/manifest.json
+++ b/manifest.json
@@ -14,40 +14,43 @@
             "scripts/background.js"
         ]
     },
-  "browser_action": {
-    "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+    "browser_action": {
+        "default_icon": {
+            "19": "images/icon-19.png",
+            "38": "images/icon-38.png"
+        },
+        "default_title": "DualScreen",
+        "default_popup": "popup.html"
     },
-    "default_title": "DualScreen",
-    "default_popup": "popup.html"
-  },
-  "options_page": "options.html",
-  "omnibox": {
-    "keyword": "DualScreen"
-  },
-  "content_scripts": [
-    {
-      "matches": [
+    "options_page": "options.html",
+    "omnibox": {
+        "keyword": "DualScreen"
+    },
+    "web_accessible_resources": [
+        "panel.html"
+    ],
+    "content_scripts": [
+        {
+            "matches": [
+                "http://*/*",
+                "https://*/*"
+            ],
+            "css": [
+                "styles/main.css"
+            ],
+            "js": [
+                "scripts/jquery-1.11.0.min.js",
+                "scripts/contentscript.js"
+            ],
+            "run_at": "document_end",
+            "all_frames": false
+        }
+    ],
+    "permissions": [
+        "tabs",
+        "history",
+        "management",
         "http://*/*",
         "https://*/*"
-      ],
-      "css": [
-        "styles/main.css"
-      ],
-      "js": [
-        "scripts/jquery-1.11.0.min.js",
-        "scripts/contentscript.js"
-      ],
-      "run_at": "document_end",
-      "all_frames": false
-    }
-  ],
-  "permissions": [
-    "tabs",
-    "history",
-    "management",
-    "http://*/*",
-    "https://*/*"
-  ]
+    ]
 }
