--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Inside Comments",
+    "name": "Obiter",
     "version": "0.1.1",
     "manifest_version": 2,
-    "description": "Inside Comments",
+    "description": "Obiter Inside Comments",
     "icons": {
         "16": "images/icon-16.png",
         "128": "images/icon-128.png"
@@ -20,7 +20,7 @@
             "19": "images/icon-19.png",
             "38": "images/icon-38.png"
         },
-        "default_title": "Inside Comments",
+        "default_title": "Obiter Inside Comments",
         "default_popup": "popup.html"
     },
     "web_accessible_resources": [
